Basic print layout and print preview

--- a/templates/_skeleton.html
+++ b/templates/_skeleton.html
@@ -1,5 +1,15 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>{{ title }}</title>
+    <link rel="stylesheet" href="assets/style.css">
+</head>
+<body>
 {{#each pages}}
     <div class="page">
         {{ this }}
     </div>
 {{/each}}
+</body>
+</html>
