WIP: Portfolio layout

--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -1,1 +1,20 @@
-Hello {{ title }} from {{ filename }}
+<div class="page page-left">
+    <div class="flex flex-row fw">
+        <div>
+            <div class="category-image"></div>
+        </div>
+        <div class="flex flex-col fw">
+            <h1 class="title">{{ title }}</h1>
+            <div class="flex flex-row">
+                <ul class="attributes">
+                    <li>Attributes</li>
+                </ul>
+                <image src="foo" alt="missing image"></image>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="page page-right">
+    Right Page
+</div>
+
