--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -6,9 +6,7 @@
         <div class="flex flex-col fw">
             <h1 class="title">{{ title }}</h1>
             <div class="flex flex-row">
-                <ul class="attributes">
-                    <li>Attributes</li>
-                </ul>
+                {{>attributes icons=attributeIcons}}
                 <image src="foo" alt="missing image"></image>
             </div>
         </div>
