--- a/templates/portfolio-skeleton.html
+++ b/templates/portfolio-skeleton.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>{{ title }}</title>
+    <title>{{ target.title }}</title>
     <link rel="stylesheet" href="assets/framework.css">
     <link rel="stylesheet" href="assets/portfolio/style.css">
+    <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
 </head>
 <body>
     <div class="container">
