--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -1,7 +1,7 @@
 <div class="page page-left">
     <div class="flex flex-row fw">
         <div>
-            <div class="category-image"></div>
+            <div class="{{lookup ../categoryIcons @key}}"></div>
         </div>
         <div class="flex flex-col fw">
             <h1 class="title">{{ title }}</h1>
@@ -19,4 +19,3 @@
 <div class="page page-right">
     {{{ content }}}
 </div>
-
