Added img, added cover and intro pages to school_portfolio

--- a/templates/portfolio-skeleton_school.html
+++ b/templates/portfolio-skeleton_school.html
@@ -10,9 +10,55 @@
 </head>
 <body>
     <div class="container">
-    {{#each pages}}
-            {{{ this }}}
-    {{/each}}
+      <div class="page page-cover-back">
+        <h3> Cover Back </h3>
+      </div>
+
+      <div class="page page-cover-front">
+        <h3> Cover Front </h3>
+      </div>
+
+      <div class="page page-left">
+        <h3> Impressum </h3>
+      </div>
+
+      <div class="page page-right">
+        <h3> Der FabLab Oberland e.V. </h3>
+        <div class="preamble">
+          <p> Der gemeinnützige Verein FabLab Oberland e.V. wurde im April 2018 in Miesbach gegründet.
+            Seit dem Start wachsen wir ständig und haben derzeit 56 Mitglieder (Stand Juli 2020).
+            Als Verein haben wir uns zwei Schwerpunkte gesetzt: Erstens wollen wir jeder Person die Möglichkeit geben, an eigenen (Problem-) Lösungen zu arbeiten.
+            Deshalb betreiben wir eine offene Werkstatt, in der (fast) alles kreiert, realisiert und erschaffen werden kann.
+          <p> Unser zweites Anliegen ist die Unterstützung von lokalen Bildungseinrichtungen. Hier kümmern wir uns um die Vermittlung von Themen wie Technologie und IT, Handwerk und Kunst. Dafür sind wir zum Beispiel mit unserem mobilen FabLab Bus Hubertus unterwegs – einer Forschungswerkstatt auf Rädern, mit der wir Schulen besuchen, um Kinder und Jugendliche aller Bildungsschichten fürs Tüfteln und Ausprobieren zu begeistern.
+        </div>
+      </div>
+
+      <div class="page page-left">
+        <h3> Das mobile FabLab </h3>
+        <div class="preamble">
+          <p> An Bord unserer Forschungswerkstatt auf vier Rädern sind ein 3D-Drucker, ein Lasercutter und Equipment für viele Experimente.
+            Tüfteln im Klassenzimmer oder im Bus? Geht beides!
+            Das mobile Fablab macht sich stark für Technik und Naturwissenschaften – und für alle, die sich dafür interessieren.
+            Unser Anspruch: Maßgeschneiderte Kurse und Aktivitäten, die begeistern.
+            Passend für jede Schulart und Altersklasse, von Otterfing bis Bayrischzell.
+        </div>
+      </div>
+
+      <div class="page page-right">
+        <h3> Team </h3>
+      </div>
+
+      <div class="page page-left">
+        <h3> Explaination </h3>
+      </div>
+
+      <div class="page page-right">
+        <h3> TOC </h3>
+      </div>
+
+      {{#each pages}}
+              {{{ this }}}
+      {{/each}}
     </div>
 </body>
 </html>
