--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -12,7 +12,7 @@
                 {{/each}}
                 </ul>
 
-                <image src="foo" alt="missing image"></image>
+                <image src="../content/img/kurse/wasseranalyse_process.png" alt="missing image" width=200px></image>
             </div>
             <div class="flex flex-row">
               <ul class="curriculum_reference">
@@ -26,4 +26,5 @@
 </div>
 <div class="page page-right">
     {{{ content }}}
+    <image src="../content/img/kurse/wasseranalyse_result.png" alt="missing image" width=200px></image>
 </div>
