--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -13,7 +13,7 @@
                 </ul>
 
                 <div id="result">
-                  <img src="../content/img/kurse/wasseranalyse_result.png" alt="missing image"/>
+                  <img src="{{ image_result }}" alt="missing image"/>
 
                 </div>
             </div>
@@ -29,7 +29,7 @@
 </div>
 <div class="page page-right">
     <div id="process-spacer"></div>
-    <img id="process" src="../content/img/kurse/wasseranalyse_process.png" alt="missing image"/>
+    <img id="process" src= "{{ image_process }}" alt="missing image"/>
     {{{ content }}}
 
 
