--- a/templates/portfolio-skeleton_school.html
+++ b/templates/portfolio-skeleton_school.html
@@ -25,18 +25,25 @@
       <div class="page page-right">
         <h3> Der FabLab Oberland e.V. </h3>
         <div class="preamble">
-          <p> Der gemeinnützige Verein FabLab Oberland e.V. wurde im April 2018 in Miesbach gegründet.
-            Seit dem Start wachsen wir ständig und haben derzeit 56 Mitglieder (Stand Juli 2020).
-            Als Verein haben wir uns zwei Schwerpunkte gesetzt: Erstens wollen wir jeder Person die Möglichkeit geben, an eigenen (Problem-) Lösungen zu arbeiten.
+          <p> Wir sind ein gemeinnütziger Verein der im April 2018 in Miesbach gegründet.
+            Als Verein haben wir uns das Ziel gesetzt jeder Person die Möglichkeit geben, an eigenen (Problem-) Lösungen zu arbeiten.
             Deshalb betreiben wir eine offene Werkstatt, in der (fast) alles kreiert, realisiert und erschaffen werden kann.
-          <p> Unser zweites Anliegen ist die Unterstützung von lokalen Bildungseinrichtungen. Hier kümmern wir uns um die Vermittlung von Themen wie Technologie und IT, Handwerk und Kunst. Dafür sind wir zum Beispiel mit unserem mobilen FabLab Bus Hubertus unterwegs – einer Forschungswerkstatt auf Rädern, mit der wir Schulen besuchen, um Kinder und Jugendliche aller Bildungsschichten fürs Tüfteln und Ausprobieren zu begeistern.
+            Zusätzlich sind wir mit unserem Bildungsprogramm im Oberland und vorallem im Landkreis Miesbach sehr aktiv.
+          <p> Wir sind in der Region stark verwurzelt und kennen auch die Bedürfnisse der jüngsten Bürger:innen.
+            Als größter regionaler Akteur im Bereich der MINT-Bildung stärkt und erweitert unser Verein das lokale Bildungsangebot.
+            Wir stehen für eine offene Aufklärung in Technologie, Digitalisierung und Wissenschaft auf Augenhöhe.
         </div>
       </div>
 
       <div class="page page-left">
         <h3> Das mobile FabLab </h3>
         <div class="preamble">
-          <p> An Bord unserer Forschungswerkstatt auf vier Rädern sind ein 3D-Drucker, ein Lasercutter und Equipment für viele Experimente.
+          <p> In der Zukunft wird die Digitalisierung weiter voranschreiten und neue Technologien sich schneller denn je weiterentwickeln.
+            Darauf möchten wir die Generation von morgen bestmöglich vorbereiten.
+            Deshalb sind mit unserem mobilen FabLab-Bus Hubertus unterwegs — einer Forschungswerkstatt auf Rädern, mit der wir Schulen und andere Bildungseinrichtungen besuchen, um Kinder und Jugendliche aller Bildungsschichten für Naturwissenschaften und Technik zu begeistern.
+            Wir schaffen einen offenen Zugang zu MINT-Themen und neuen Technologien für Alle und bauen dadurch Vorbehalte ab!
+
+          <p> An Bord unserer mobilen Forschungswerkstatt sind ein 3D-Drucker, ein Lasercutter und Equipment für viele Experimente.
             Tüfteln im Klassenzimmer oder im Bus? Geht beides!
             Das mobile Fablab macht sich stark für Technik und Naturwissenschaften – und für alle, die sich dafür interessieren.
             Unser Anspruch: Maßgeschneiderte Kurse und Aktivitäten, die begeistern.
@@ -46,6 +53,10 @@
 
       <div class="page page-right">
         <h3> Team </h3>
+        <div class="flex flex-row">
+          <img src="../content/img/alex_portrait.png" alt="missing image"/>
+          <img src="../content/img/julian_portrait.png" alt="missing image"/>
+        </div>
       </div>
 
       <div class="page page-left">
