added some  style

--- a/templates/portfolio-skeleton_school.html
+++ b/templates/portfolio-skeleton_school.html
@@ -20,6 +20,12 @@
 
       <div class="page page-left">
         <h3> Impressum </h3>
+        <div class="impressum">
+          <b> Alexander Kutschera </b> <br>
+          FabLab Oberland e.V. <br>
+          Tölzer Straße 3A <br>
+          83703 Gmund am Tegernsee <br>
+        </div>
       </div>
 
       <div class="page page-right">
@@ -53,9 +59,17 @@
 
       <div class="page page-right">
         <h3> Team </h3>
-        <div class="flex flex-row">
-          <img src="../content/img/alex_portrait.png" alt="missing image"/>
-          <img src="../content/img/julian_portrait.png" alt="missing image"/>
+        <div class="flex flex-row space-even">
+          <div class="flex flex-col">
+            <img id="portrait" src="../content/img/alex_portrait.jpg" alt="missing image"/>
+            <h4 align=center> Alexander Kutschera </h4>
+            <p> Text
+          </div>
+          <div class="flex flex-col space-even">
+            <img id="portrait" src="../content/img/julian_portrait.jpg" alt="missing image"/>
+            <h4 align=center> Julian Heyder </h4>
+            <p> Text
+          </div>
         </div>
       </div>
 
