edited small things

--- a/templates/portfolio-skeleton_school.html
+++ b/templates/portfolio-skeleton_school.html
@@ -21,10 +21,36 @@
       <div class="page page-left">
         <h3> Impressum </h3>
         <div class="impressum">
-          <b> Alexander Kutschera </b> <br>
-          FabLab Oberland e.V. <br>
-          Tölzer Straße 3A <br>
-          83703 Gmund am Tegernsee <br>
+          <div class="flex flex-row space-between fh">
+              <div class="flex flex-col space-between">
+
+                <p> <b> Alexander Kutschera </b> <br>
+                  FabLab Oberland e.V. <br>
+                  Tölzer Straße 3A <br>
+                  83703 Gmund am Tegernsee <br>
+                  Mail: alex@oberlab.de <br>
+                  Tel: +49 8022 9392632
+
+                <p> Fotos: Max Horn, Alexander Kutschera, Julian Heyder <br>
+                  Texte: Julian Heyder, Alexander Kutschera <br>
+                  Corporate Design: Gipfelformer <br>
+                  Design Umsetzung: Alexander Kutschera <br>
+                  Portfolio Generator: Joseph Paul, Alexander Kutschera
+
+                <p> <u>Ihr findet uns online unter:</u> <br>
+                  oberlab.de <br>
+                  facebook.com/FabLabOberland/ <br>
+                  instagram.com/FabLabOberland/ <br>
+              </div>
+              <div class="flex flex-col end">
+                <div>
+                  <p align=right> Dieses Portfolio wurde automatisch generiert. <br>
+                    Version: 1.0.0 (07.05.2021) <br>
+                    Lizenz: CC-BY-SA 4.0 <br>
+                </div>
+              </div>
+          </div>
+
         </div>
       </div>
 
@@ -32,7 +58,7 @@
         <h3> Der FabLab Oberland e.V. </h3>
         <div class="preamble">
           <p> Wir sind ein gemeinnütziger Verein der im April 2018 in Miesbach gegründet.
-            Als Verein haben wir uns das Ziel gesetzt jeder Person die Möglichkeit geben, an eigenen (Problem-) Lösungen zu arbeiten.
+            Wir haben uns das Ziel gesetzt jeder Person die Möglichkeit geben, an eigenen (Problem-) Lösungen zu arbeiten.
             Deshalb betreiben wir eine offene Werkstatt, in der (fast) alles kreiert, realisiert und erschaffen werden kann.
             Zusätzlich sind wir mit unserem Bildungsprogramm im Oberland und vorallem im Landkreis Miesbach sehr aktiv.
           <p> Wir sind in der Region stark verwurzelt und kennen auch die Bedürfnisse der jüngsten Bürger:innen.
@@ -74,7 +100,7 @@
       </div>
 
       <div class="page page-left">
-        <h3> Explaination </h3>
+        <h3> Wie funktionierts? </h3>
       </div>
 
       <div class="page page-right">
