Implement page count and TOC (fixes #36)

--- a/templates/portfolio-skeleton.html
+++ b/templates/portfolio-skeleton.html
@@ -104,7 +104,8 @@
       </div>
 
       <div class="page page-right">
-        <h3> TOC </h3>
+        <h3>TOC</h3>
+        {{{ toc }}}
       </div>
 
 
