--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -26,11 +26,11 @@
             </div>
         </div>
     </div>
+    <div class="pagenum">{{ pageCount.current }}</div>
 </div>
 <div class="page page-right">
     <div id="process-spacer"></div>
     <img id="process" src= "{{ image_process }}" alt="missing image"/>
     {{{ content }}}
-
-
+    <div class="pagenum">{{ add pageCount.current 1 }}</div>
 </div>
