Fix spelling errors

--- a/templates/portfolio-skeleton.html
+++ b/templates/portfolio-skeleton.html
@@ -57,10 +57,10 @@
       <div class="page page-right">
         <h3> Der FabLab Oberland e.V. </h3>
         <div class="preamble">
-          <p> Wir sind ein gemeinnütziger Verein der im April 2018 in Miesbach gegründet.
-            Wir haben uns das Ziel gesetzt jeder Person die Möglichkeit geben, an eigenen (Problem-) Lösungen zu arbeiten.
+          <p> Wir sind ein gemeinnütziger Verein, der im April 2018 in Miesbach gegründet wurde.
+            Wir haben uns das Ziel gesetzt, jeder Person die Möglichkeit zu geben, an eigenen (Problem-) Lösungen zu arbeiten.
             Deshalb betreiben wir eine offene Werkstatt, in der (fast) alles kreiert, realisiert und erschaffen werden kann.
-            Zusätzlich sind wir mit unserem Bildungsprogramm im Oberland und vorallem im Landkreis Miesbach sehr aktiv.
+            Zusätzlich sind wir mit unserem Bildungsprogramm im Oberland und vor allem im Landkreis Miesbach sehr aktiv.
           <p> Wir sind in der Region stark verwurzelt und kennen auch die Bedürfnisse der jüngsten Bürger:innen.
             Als größter regionaler Akteur im Bereich der MINT-Bildung stärkt und erweitert unser Verein das lokale Bildungsangebot.
             Wir stehen für eine offene Aufklärung in Technologie, Digitalisierung und Wissenschaft auf Augenhöhe.
