--- a/templates/portfolio-skeleton.html
+++ b/templates/portfolio-skeleton.html
@@ -88,12 +88,12 @@
         <div class="flex flex-row space-even">
           <div class="flex flex-col">
             <img id="portrait" src="../content/img/alex_portrait.jpg" alt="missing image"/>
-            <h4 align=center> Alexander Kutschera </h4>
+            <h3 align=center> Alexander Kutschera </h3>
             <p> Text
           </div>
           <div class="flex flex-col space-even">
             <img id="portrait" src="../content/img/julian_portrait.jpg" alt="missing image"/>
-            <h4 align=center> Julian Heyder </h4>
+            <h3 align=center> Julian Heyder </h3>
             <p> Text
           </div>
         </div>
@@ -104,7 +104,7 @@
       </div>
 
       <div class="page page-right">
-        <h3>TOC</h3>
+        <h3> Inhalt </h3>
         {{{ toc }}}
       </div>
 
