--- a/templates/portfolio-skeleton.html
+++ b/templates/portfolio-skeleton.html
@@ -34,7 +34,7 @@
                 <p> Fotos: Max Horn, Alexander Kutschera, Julian Heyder <br>
                   Texte: Julian Heyder, Alexander Kutschera <br>
                   Corporate Design: Gipfelformer <br>
-                  Design Umsetzung: Alexander Kutschera <br>
+                  Design Umsetzung: Alexander Kutschera, Julian Heyder <br>
                   Portfolio Generator: Joseph Paul, Alexander Kutschera
 
                 <p> <u>Ihr findet uns online unter:</u> <br>
