resized img, added style

--- a/templates/portfolio-skeleton.html
+++ b/templates/portfolio-skeleton.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
       <div class="page page-cover-back">
-        
+
       </div>
 
       <div class="page page-cover-front">
@@ -88,13 +88,12 @@
         <div class="flex flex-row space-even">
           <div class="flex flex-col">
             <img id="portrait" src="../content/img/alex_portrait.jpg" alt="missing image"/>
-            <h3 align=center> Alexander Kutschera </h3>
-            <p> Text
+            <h2 align=center> Alexander Kutschera </h2>
+
           </div>
           <div class="flex flex-col space-even">
             <img id="portrait" src="../content/img/julian_portrait.jpg" alt="missing image"/>
             <h3 align=center> Julian Heyder </h3>
-            <p> Text
           </div>
         </div>
       </div>
@@ -104,8 +103,16 @@
       </div>
 
       <div class="page page-right">
+        <h3> Wie funktionierts? </h3>
+      </div>
+
+      <div class="page page-left">
         <h3> Inhalt </h3>
         {{{ toc }}}
+      </div>
+
+      <div class="page page-right">
+        <h3> Inhalt </h3>
       </div>
 
     {{#each pages}}
