--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -5,7 +5,7 @@
         </div>
         <div class="flex flex-col fw">
             <h1 class="title">{{ title }}</h1>
-            <div class="flex flex-row space-between items-center">
+            <div class="flex flex-row space-between items-center add-vspace">
                 <ul class="attributes">
                 {{#each attributes}}
                     <li class="attribute-{{ @key }}"><i class="fas fa-fw fa-{{lookup ../attributeIcons @key}}"></i>{{ this }}</li>
