big updated of pics and templates

--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -13,7 +13,7 @@
                 </ul>
 
                 <div id="result">
-                  <img src="{{ image_result }}" alt="missing image"/>
+                  <img src="{{ image_result }}"/>
 
                 </div>
             </div>
@@ -30,7 +30,7 @@
 </div>
 <div class="page page-right">
     <div id="process-spacer"></div>
-    <img id="process" src= "{{ image_process }}" alt="missing image"/>
+    <img id="process" src= "{{ image_process }}"/>
     {{{ content }}}
     <div class="pagenum">{{ add pageCount.current 1 }}</div>
 </div>
