--- a/templates/portfolio-skeleton_school.html
+++ b/templates/portfolio-skeleton_school.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
       <div class="page page-cover-back">
-        
+
       </div>
 
       <div class="page page-cover-front">
@@ -31,10 +31,10 @@
                   Mail: alex@oberlab.de <br>
                   Tel: +49 8022 9392632
 
-                <p> Fotos: Max Horn, Alexander Kutschera, Julian Heyder <br>
-                  Texte: Julian Heyder, Alexander Kutschera <br>
+                <p> Fotos: Max Horn, Alexander Kutschera, Julian C. Heyder <br>
+                  Texte: Julian C. Heyder, Alexander Kutschera <br>
                   Corporate Design: Gipfelformer <br>
-                  Design Umsetzung: Alexander Kutschera <br>
+                  Design Umsetzung: Alexander Kutschera, Julian C. Heyder <br>
                   Portfolio Generator: Joseph Paul, Alexander Kutschera
 
                 <p> <u>Ihr findet uns online unter:</u> <br>
@@ -45,7 +45,7 @@
               <div class="flex flex-col end">
                 <div>
                   <p align=right> Dieses Portfolio wurde automatisch generiert. <br>
-                    Version: 1.0.0 (07.05.2021) <br>
+                    Version: 1.0.0 (28.05.2021) <br>
                     Lizenz: CC-BY-SA 4.0 <br>
                 </div>
               </div>
@@ -57,10 +57,10 @@
       <div class="page page-right">
         <h3> Der FabLab Oberland e.V. </h3>
         <div class="preamble">
-          <p> Wir sind ein gemeinnütziger Verein der im April 2018 in Miesbach gegründet.
-            Wir haben uns das Ziel gesetzt jeder Person die Möglichkeit geben, an eigenen (Problem-) Lösungen zu arbeiten.
+          <p> Wir sind ein gemeinnütziger Verein, der im April 2018 in Miesbach gegründet wurde.
+            Wir haben uns das Ziel gesetzt, jeder Person die Möglichkeit zu geben, an eigenen (Problem-) Lösungen zu arbeiten.
             Deshalb betreiben wir eine offene Werkstatt, in der (fast) alles kreiert, realisiert und erschaffen werden kann.
-            Zusätzlich sind wir mit unserem Bildungsprogramm im Oberland und vorallem im Landkreis Miesbach sehr aktiv.
+            Zusätzlich sind wir mit unserem Bildungsprogramm im Oberland und vor allem im Landkreis Miesbach sehr aktiv.
           <p> Wir sind in der Region stark verwurzelt und kennen auch die Bedürfnisse der jüngsten Bürger:innen.
             Als größter regionaler Akteur im Bereich der MINT-Bildung stärkt und erweitert unser Verein das lokale Bildungsangebot.
             Wir stehen für eine offene Aufklärung in Technologie, Digitalisierung und Wissenschaft auf Augenhöhe.
@@ -70,13 +70,13 @@
       <div class="page page-left">
         <h3> Das mobile FabLab </h3>
         <div class="preamble">
-          <p> In der Zukunft wird die Digitalisierung weiter voranschreiten und neue Technologien sich schneller denn je weiterentwickeln.
+          <p> In der Zukunft wird die Digitalisierung weiter voranschreiten und sich neue Technologien schneller denn je weiterentwickeln.
             Darauf möchten wir die Generation von morgen bestmöglich vorbereiten.
-            Deshalb sind mit unserem mobilen FabLab-Bus Hubertus unterwegs — einer Forschungswerkstatt auf Rädern, mit der wir Schulen und andere Bildungseinrichtungen besuchen, um Kinder und Jugendliche aller Bildungsschichten für Naturwissenschaften und Technik zu begeistern.
-            Wir schaffen einen offenen Zugang zu MINT-Themen und neuen Technologien für Alle und bauen dadurch Vorbehalte ab!
+            Deshalb sind wir mit unserem FabLab-Bus Hubertus unterwegs — einer Forschungswerkstatt auf Rädern, mit der wir Schulen und andere Bildungseinrichtungen besuchen, um Kinder und Jugendliche aller Bildungsschichten für Naturwissenschaften und Technik zu begeistern.
+            Wir schaffen einen offenen Zugang zu MINT-Themen und neuen Technologien für alle und bauen dadurch Vorbehalte ab!
 
           <p> An Bord unserer mobilen Forschungswerkstatt sind ein 3D-Drucker, ein Lasercutter und Equipment für viele Experimente.
-            Tüfteln im Klassenzimmer oder im Bus? Geht beides!
+            Tüfteln im Klassenzimmer oder im Bus? Beides ist möglich!
             Das mobile Fablab macht sich stark für Technik und Naturwissenschaften – und für alle, die sich dafür interessieren.
             Unser Anspruch: Maßgeschneiderte Kurse und Aktivitäten, die begeistern.
             Passend für jede Schulart und Altersklasse, von Otterfing bis Bayrischzell.
@@ -88,13 +88,12 @@
         <div class="flex flex-row space-even">
           <div class="flex flex-col">
             <img id="portrait" src="../content/img/alex_portrait.jpg" alt="missing image"/>
-            <h4 align=center> Alexander Kutschera </h4>
-            <p> Text
+            <h3 align=center> Alexander Kutschera </h3>
+
           </div>
           <div class="flex flex-col space-even">
             <img id="portrait" src="../content/img/julian_portrait.jpg" alt="missing image"/>
-            <h4 align=center> Julian Heyder </h4>
-            <p> Text
+            <h3 align=center> Julian C. Heyder </h3>
           </div>
         </div>
       </div>
@@ -104,7 +103,16 @@
       </div>
 
       <div class="page page-right">
-        <h3> TOC </h3>
+        <h3> Wie funktionierts? </h3>
+      </div>
+
+      <div class="page page-left">
+        <h3> Inhalt </h3>
+        {{{ toc }}}
+      </div>
+
+      <div class="page page-right">
+        <h3> Inhalt </h3>
       </div>
 
       {{#each pages}}
