--- a/templates/portfolio-skeleton.html
+++ b/templates/portfolio-skeleton.html
@@ -100,6 +100,19 @@
 
       <div class="page page-left">
         <h3> Wie funktionierts? </h3>
+        <div class="preamble">
+          <p> Hat ein Kurs oder eine Kursreihe euer Interesse geweckt, könnt ihr ganz einfach eine Anfrage an uns senden.
+            Ihr könnt entweder den QR-Code scannen und euch anmelden, oder ganz klassisch mit Email oder Telefon mit uns in Kontakt treten.
+            Nennt uns einfach den Kurs, die Anzahl an Teilnehmern, Ort und Zeit, den ihr gerne mit uns umsetzen wollt und vergesst dabei bitte nicht,
+            eure Kontaktdaten zu hinterlassen, damit wir euch kontaktieren können.
+
+          <p> Solltet ihr aus diversen Gründen unser Angebot trotz vorangegangener Bestätigung nicht mehr wahrnehmen wollen/können, so teilt uns dies
+            unbedingt mindestens 14 Tage im Voraus mit. Zudem beinhalten die angegebenen Kosten die Materialkosten; individuelle Kosten für
+            Mitarbeiter werden je nach Kurs und Zeitaufwand berechnet und euch freilich in der Planung kommuniziert.
+            Selbstverständlich kann man auch mit uns verhandeln ;)
+
+          <p> Wir wünschen euch viel Spaß beim Durchstöbern unseres Kursangebotes und freuen uns schon sehr auf eure Anfragen und spannende Kurse!
+        </div> 
       </div>
 
       <div class="page page-right">
