--- a/templates/portfolio-skeleton.html
+++ b/templates/portfolio-skeleton.html
@@ -31,10 +31,10 @@
                   Mail: alex@oberlab.de <br>
                   Tel: +49 8022 9392632
 
-                <p> Fotos: Max Horn, Alexander Kutschera, Julian C. Heyder <br>
-                  Texte: Julian C. Heyder, Alexander Kutschera <br>
+                <p> Fotos: Max Horn, Alexander Kutschera, Julian Heyder <br>
+                  Texte: Julian Heyder, Alexander Kutschera <br>
                   Corporate Design: Gipfelformer <br>
-                  Design Umsetzung: Alexander Kutschera, Julian C. Heyder <br>
+                  Design Umsetzung: Alexander Kutschera, Julian Heyder <br>
                   Portfolio Generator: Joseph Paul, Alexander Kutschera
 
                 <p> <u>Ihr findet uns online unter:</u> <br>
@@ -45,7 +45,7 @@
               <div class="flex flex-col end">
                 <div>
                   <p align=right> Dieses Portfolio wurde automatisch generiert. <br>
-                    Version: 1.0.0 (28.05.2021) <br>
+                    Version: 1.0.0 (07.05.2021) <br>
                     Lizenz: CC-BY-SA 4.0 <br>
                 </div>
               </div>
@@ -70,13 +70,13 @@
       <div class="page page-left">
         <h3> Das mobile FabLab </h3>
         <div class="preamble">
-          <p> In der Zukunft wird die Digitalisierung weiter voranschreiten und sich neue Technologien schneller denn je weiterentwickeln.
+          <p> In der Zukunft wird die Digitalisierung weiter voranschreiten und neue Technologien sich schneller denn je weiterentwickeln.
             Darauf möchten wir die Generation von morgen bestmöglich vorbereiten.
-            Deshalb sind wir mit unserem FabLab-Bus Hubertus unterwegs — einer Forschungswerkstatt auf Rädern, mit der wir Schulen und andere Bildungseinrichtungen besuchen, um Kinder und Jugendliche aller Bildungsschichten für Naturwissenschaften und Technik zu begeistern.
-            Wir schaffen einen offenen Zugang zu MINT-Themen und neuen Technologien für alle und bauen dadurch Vorbehalte ab!
+            Deshalb sind mit unserem mobilen FabLab-Bus Hubertus unterwegs — einer Forschungswerkstatt auf Rädern, mit der wir Schulen und andere Bildungseinrichtungen besuchen, um Kinder und Jugendliche aller Bildungsschichten für Naturwissenschaften und Technik zu begeistern.
+            Wir schaffen einen offenen Zugang zu MINT-Themen und neuen Technologien für Alle und bauen dadurch Vorbehalte ab!
 
           <p> An Bord unserer mobilen Forschungswerkstatt sind ein 3D-Drucker, ein Lasercutter und Equipment für viele Experimente.
-            Tüfteln im Klassenzimmer oder im Bus? Beides ist möglich!
+            Tüfteln im Klassenzimmer oder im Bus? Geht beides!
             Das mobile Fablab macht sich stark für Technik und Naturwissenschaften – und für alle, die sich dafür interessieren.
             Unser Anspruch: Maßgeschneiderte Kurse und Aktivitäten, die begeistern.
             Passend für jede Schulart und Altersklasse, von Otterfing bis Bayrischzell.
@@ -99,24 +99,36 @@
       </div>
 
       <div class="page page-left">
-        <h3> Wie funktionierts? </h3>
+        <h3> So funktionierts! </h3>
         <div class="preamble">
           <p> Hat ein Kurs oder eine Kursreihe euer Interesse geweckt, könnt ihr ganz einfach eine Anfrage an uns senden.
-            Ihr könnt entweder den QR-Code scannen und euch anmelden, oder ganz klassisch mit Email oder Telefon mit uns in Kontakt treten.
-            Nennt uns einfach den Kurs, die Anzahl an Teilnehmern, Ort und Zeit, den ihr gerne mit uns umsetzen wollt und vergesst dabei bitte nicht,
-            eure Kontaktdaten zu hinterlassen, damit wir euch kontaktieren können.
+            Ihr könnt entweder den QR-Code scannen und das Onlineformular ausfüllen oder ganz klassisch mit Email oder Telefon mit uns in Kontakt treten.
+            Nennt uns einfach den Kurs, die Anzahl an Teilnehmern sowie Ort und Zeit und vergesst dabei bitte nicht,
+            eure Kontaktdaten zu hinterlassen, damit wir euch erreichen können. Meldet euch auch wenn ihr nicht fündig geworden sei und ein individuelles Kursangebot wünscht.
 
-          <p> Solltet ihr aus diversen Gründen unser Angebot trotz vorangegangener Bestätigung nicht mehr wahrnehmen wollen/können, so teilt uns dies
-            unbedingt mindestens 14 Tage im Voraus mit. Zudem beinhalten die angegebenen Kosten die Materialkosten; individuelle Kosten für
-            Mitarbeiter werden je nach Kurs und Zeitaufwand berechnet und euch freilich in der Planung kommuniziert.
-            Selbstverständlich kann man auch mit uns verhandeln ;)
+          <p> Die angegebenen Kosten beziehen sich außschließlich auf den Materialaufwand pro Person. Zu diesen kommen Personalkosten die je nach Kurs, Zeit- und Personalaufwand berechnet werden.
 
-          <p> Wir wünschen euch viel Spaß beim Durchstöbern unseres Kursangebotes und freuen uns schon sehr auf eure Anfragen und spannende Kurse!
-        </div> 
+          <p> Wir wünschen euch viel Spaß beim Durchstöbern unseres Kursangebotes und freuen uns schon sehr auf eure Anfragen und spannende Kurse mit euch!
+
+        </div>
       </div>
 
       <div class="page page-right">
-        <h3> Wie funktionierts? </h3>
+        <h3> Anfrage stellen </h3>
+        <div class="flex flex-row space-even">
+          <div class="flex flex-col">
+            <h4 align=center> Onlineformular</h4>
+            <img id="QR" src="../content/QR-Codes/Typeform.png">
+          </div>
+
+          <div class="flex flex-col">
+            <h4 align=center> Kontaktdaten </h4>
+           <p style="margin-top: 80px;text-align: center;"> <b>Alexander Kutschera</b> <br>
+             Mail: alex@oberlab.de <br>
+             Tel.: +49 8022 939 26 32 <br>
+             Web: mobiles-fablab.de
+          </div>
+        </div>
       </div>
 
       <div class="page page-left">
