Added Absicherung skeleton

--- a/templates/portfolio-skeleton_school.html
+++ b/templates/portfolio-skeleton_school.html
@@ -47,6 +47,7 @@
                 <p align=right> Dieses Portfolio wurde automatisch generiert. <br>
                   Version: 1.0.0 (07.05.2021) <br>
                   Lizenz: CC-BY-SA 4.0 <br>
+                  Änderungen und Irrtümer vorbehalten! <br>
               </div>
             </div>
         </div>
