Major grammar and typo corrections

--- a/templates/portfolio-skeleton.html
+++ b/templates/portfolio-skeleton.html
@@ -55,7 +55,7 @@
       </div>
 
       <div class="page page-right">
-        <h3> Der FabLab Oberland e.V. </h3>
+        <h3> Der Vereien </h3>
         <div class="preamble">
           <p> Wir sind ein gemeinnütziger Verein, der im April 2018 in Miesbach gegründet wurde.
             Wir haben uns das Ziel gesetzt, jeder Person die Möglichkeit zu geben, an eigenen (Problem-) Lösungen zu arbeiten.
@@ -72,8 +72,8 @@
         <div class="preamble">
           <p> In der Zukunft wird die Digitalisierung weiter voranschreiten und neue Technologien sich schneller denn je weiterentwickeln.
             Darauf möchten wir die Generation von morgen bestmöglich vorbereiten.
-            Deshalb sind mit unserem mobilen FabLab-Bus Hubertus unterwegs — einer Forschungswerkstatt auf Rädern, mit der wir Schulen und andere Bildungseinrichtungen besuchen, um Kinder und Jugendliche aller Bildungsschichten für Naturwissenschaften und Technik zu begeistern.
-            Wir schaffen einen offenen Zugang zu MINT-Themen und neuen Technologien für Alle und bauen dadurch Vorbehalte ab!
+            Deshalb sind wir mit unserem mobilen FabLab-Bus Hubertus unterwegs — einer Forschungswerkstatt auf Rädern, mit der wir Schulen und andere Bildungseinrichtungen besuchen, um Kinder und Jugendliche aller Bildungsschichten für Naturwissenschaften und Technik zu begeistern.
+            Wir schaffen einen offenen Zugang zu MINT-Themen und neuen Technologien für alle und bauen dadurch Vorbehalte ab!
 
           <p> An Bord unserer mobilen Forschungswerkstatt sind ein 3D-Drucker, ein Lasercutter und Equipment für viele Experimente.
             Tüfteln im Klassenzimmer oder im Bus? Geht beides!
@@ -102,7 +102,7 @@
         <h3> So funktionierts! </h3>
         <div class="preamble">
           <p> Hat ein Kurs oder eine Kursreihe euer Interesse geweckt, könnt ihr ganz einfach eine Anfrage an uns senden.
-            Ihr könnt entweder den QR-Code scannen und das Onlineformular ausfüllen oder ganz klassisch mit Email oder Telefon mit uns in Kontakt treten.
+            Ihr könnt entweder den QR-Code scannen und das Onlineformular ausfüllen oder ganz klassisch per Email oder Telefon mit uns in Kontakt treten.
             Nennt uns einfach den Kurs, die Anzahl an Teilnehmern sowie Ort und Zeit und vergesst dabei bitte nicht,
             eure Kontaktdaten zu hinterlassen, damit wir euch erreichen können. Meldet euch auch wenn ihr nicht fündig geworden sei und ein individuelles Kursangebot wünscht.
 
