Auto stash before merge of "master" and "origin/master"

--- a/templates/portfolio-skeleton.html
+++ b/templates/portfolio-skeleton.html
@@ -9,136 +9,137 @@
     <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
 </head>
 <body>
-    <div class="container">
-      <div class="page page-cover-back">
+  <div class="container">
+    <div class="page page-cover-back">
 
-      </div>
+    </div>
 
-      <div class="page page-cover-front">
+    <div class="page page-cover-front">
 
-      </div>
+    </div>
 
-      <div class="page page-left">
-        <h3> Impressum </h3>
-        <div class="impressum">
-          <div class="flex flex-row space-between fh">
-              <div class="flex flex-col space-between">
+    <div class="page page-left">
+      <h3> Impressum </h3>
+      <div class="impressum">
+        <div class="flex flex-row space-between fh">
+            <div class="flex flex-col space-between">
 
-                <p> <b> Alexander Kutschera </b> <br>
-                  FabLab Oberland e.V. <br>
-                  Tölzer Straße 3A <br>
-                  83703 Gmund am Tegernsee <br>
-                  Mail: alex@oberlab.de <br>
-                  Tel: +49 8022 9392632
+              <p> <b> Alexander Kutschera </b> <br>
+                FabLab Oberland e.V. <br>
+                Tölzer Straße 3A <br>
+                83703 Gmund am Tegernsee <br>
+                Mail: alex@oberlab.de <br>
+                Tel: +49 8022 9392632
 
-                <p> Fotos: Max Horn, Alexander Kutschera, Julian Heyder <br>
-                  Texte: Julian Heyder, Alexander Kutschera <br>
-                  Corporate Design: Gipfelformer <br>
-                  Design Umsetzung: Alexander Kutschera, Julian Heyder <br>
-                  Portfolio Generator: Joseph Paul, Alexander Kutschera
+              <p> Fotos: Max Horn, Alexander Kutschera, Julian Heyder <br>
+                Texte: Julian Heyder, Alexander Kutschera <br>
+                Corporate Design: Gipfelformer <br>
+                Design Umsetzung: Alexander Kutschera, Julian Heyder <br>
+                Portfolio Generator: Joseph Paul, Alexander Kutschera
 
-                <p> <u>Ihr findet uns online unter:</u> <br>
-                  oberlab.de <br>
-                  facebook.com/FabLabOberland/ <br>
-                  instagram.com/FabLabOberland/ <br>
+              <p> <u>Ihr findet uns online unter:</u> <br>
+                oberlab.de <br>
+                facebook.com/FabLabOberland/ <br>
+                instagram.com/FabLabOberland/ <br>
+            </div>
+            <div class="flex flex-col end">
+              <div>
+                <p align=right> Dieses Portfolio wurde automatisch generiert. <br>
+                  Version: 1.0.0 (07.05.2021) <br>
+                  Lizenz: CC-BY-SA 4.0 <br>
+                  Änderungen und Irrtümer vorbehalten! <br>
               </div>
-              <div class="flex flex-col end">
-                <div>
-                  <p align=right> Dieses Portfolio wurde automatisch generiert. <br>
-                    Version: 1.0.0 (07.05.2021) <br>
-                    Lizenz: CC-BY-SA 4.0 <br>
-                </div>
-              </div>
-          </div>
-
+            </div>
         </div>
-      </div>
 
-      <div class="page page-right">
-        <h3> Der Vereien </h3>
-        <div class="preamble">
-          <p> Wir sind ein gemeinnütziger Verein, der im April 2018 in Miesbach gegründet wurde.
-            Wir haben uns das Ziel gesetzt, jeder Person die Möglichkeit zu geben, an eigenen (Problem-) Lösungen zu arbeiten.
-            Deshalb betreiben wir eine offene Werkstatt, in der (fast) alles kreiert, realisiert und erschaffen werden kann.
-            Zusätzlich sind wir mit unserem Bildungsprogramm im Oberland und vor allem im Landkreis Miesbach sehr aktiv.
-          <p> Wir sind in der Region stark verwurzelt und kennen auch die Bedürfnisse der jüngsten Bürger:innen.
-            Als größter regionaler Akteur im Bereich der MINT-Bildung stärkt und erweitert unser Verein das lokale Bildungsangebot.
-            Wir stehen für eine offene Aufklärung in Technologie, Digitalisierung und Wissenschaft auf Augenhöhe.
-        </div>
       </div>
+    </div>
+
+    <div class="page page-right">
+      <h3> Der FabLab Oberland e.V. </h3>
+      <div class="preamble">
+        <p> Wir sind ein gemeinnütziger Verein, der im April 2018 in Miesbach gegründet wurde.
+          Wir haben uns das Ziel gesetzt, jeder Person die Möglichkeit zu geben, an eigenen (Problem-) Lösungen zu arbeiten.
+          Deshalb betreiben wir eine offene Werkstatt, in der (fast) alles kreiert, realisiert und erschaffen werden kann.
+          Zusätzlich sind wir mit unserem Bildungsprogramm im Oberland und vor allem im Landkreis Miesbach sehr aktiv.
+        <p> Wir sind in der Region stark verwurzelt und kennen auch die Bedürfnisse der jüngsten Bürger:innen.
+          Als größter regionaler Akteur im Bereich der MINT-Bildung stärkt und erweitert unser Verein das lokale Bildungsangebot.
+          Wir stehen für eine offene Aufklärung in Technologie, Digitalisierung und Wissenschaft auf Augenhöhe.
+      </div>
+    </div>
 
       <div class="page page-left">
         <h3> Das mobile FabLab </h3>
         <div class="preamble">
           <p> In der Zukunft wird die Digitalisierung weiter voranschreiten und neue Technologien sich schneller denn je weiterentwickeln.
             Darauf möchten wir die Generation von morgen bestmöglich vorbereiten.
-            Deshalb sind wir mit unserem mobilen FabLab-Bus Hubertus unterwegs — einer Forschungswerkstatt auf Rädern, mit der wir Schulen und andere Bildungseinrichtungen besuchen, um Kinder und Jugendliche aller Bildungsschichten für Naturwissenschaften und Technik zu begeistern.
-            Wir schaffen einen offenen Zugang zu MINT-Themen und neuen Technologien für alle und bauen dadurch Vorbehalte ab!
+            Deshalb sind mit unserem mobilen FabLab-Bus Hubertus unterwegs — einer Forschungswerkstatt auf Rädern, mit der wir Schulen und andere Bildungseinrichtungen besuchen, um Kinder und Jugendliche aller Bildungsschichten für Naturwissenschaften und Technik zu begeistern.
+            Wir schaffen einen offenen Zugang zu MINT-Themen und neuen Technologien für Alle und bauen dadurch Vorbehalte ab!
 
-          <p> An Bord unserer mobilen Forschungswerkstatt sind ein 3D-Drucker, ein Lasercutter und Equipment für viele Experimente.
-            Tüfteln im Klassenzimmer oder im Bus? Geht beides!
-            Das mobile Fablab macht sich stark für Technik und Naturwissenschaften – und für alle, die sich dafür interessieren.
-            Unser Anspruch: Maßgeschneiderte Kurse und Aktivitäten, die begeistern.
-            Passend für jede Schulart und Altersklasse, von Otterfing bis Bayrischzell.
+        <p> An Bord unserer mobilen Forschungswerkstatt sind ein 3D-Drucker, ein Lasercutter und Equipment für viele Experimente.
+          Tüfteln im Klassenzimmer oder im Bus? Geht beides!
+          Das mobile Fablab macht sich stark für Technik und Naturwissenschaften – und für alle, die sich dafür interessieren.
+          Unser Anspruch: Maßgeschneiderte Kurse und Aktivitäten, die begeistern.
+          Passend für jede Schulart und Altersklasse, von Otterfing bis Bayrischzell.
+      </div>
+    </div>
+
+    <div class="page page-right">
+      <h3> Team </h3>
+      <div class="flex flex-row space-even">
+        <div class="flex flex-col">
+          <img id="portrait" src="../content/img/alex_portrait.jpg" alt="missing image"/>
+          <h3 align=center> Alexander Kutschera </h3>
+
+        </div>
+        <div class="flex flex-col space-even">
+          <img id="portrait" src="../content/img/julian_portrait.jpg" alt="missing image"/>
+          <h3 align=center> Julian C. Heyder </h3>
         </div>
       </div>
-
-      <div class="page page-right">
-        <h3> Team </h3>
-        <div class="flex flex-row space-even">
-          <div class="flex flex-col">
-            <img id="portrait" src="../content/img/alex_portrait.jpg" alt="missing image"/>
-            <h3 align=center> Alexander Kutschera </h3>
-
-          </div>
-          <div class="flex flex-col space-even">
-            <img id="portrait" src="../content/img/julian_portrait.jpg" alt="missing image"/>
-            <h3 align=center> Julian C. Heyder </h3>
-          </div>
-        </div>
-      </div>
+    </div>
 
       <div class="page page-left">
         <h3> So funktionierts! </h3>
         <div class="preamble">
           <p> Hat ein Kurs oder eine Kursreihe euer Interesse geweckt, könnt ihr ganz einfach eine Anfrage an uns senden.
-            Ihr könnt entweder den QR-Code scannen und das Onlineformular ausfüllen oder ganz klassisch per Email oder Telefon mit uns in Kontakt treten.
+            Ihr könnt entweder den QR-Code scannen und das Onlineformular ausfüllen oder ganz klassisch mit Email oder Telefon mit uns in Kontakt treten.
             Nennt uns einfach den Kurs, die Anzahl an Teilnehmern sowie Ort und Zeit und vergesst dabei bitte nicht,
             eure Kontaktdaten zu hinterlassen, damit wir euch erreichen können. Meldet euch auch wenn ihr nicht fündig geworden sei und ein individuelles Kursangebot wünscht.
 
-          <p> Die angegebenen Kosten beziehen sich außschließlich auf den Materialaufwand pro Person. Zu diesen kommen Personalkosten die je nach Kurs, Zeit- und Personalaufwand berechnet werden.
+        <p> Die angegebenen Kosten beziehen sich außschließlich auf den Materialaufwand pro Person. Zu diesen kommen Personalkosten die je nach Kurs, Zeit- und Personalaufwand berechnet werden.
 
-          <p> Wir wünschen euch viel Spaß beim Durchstöbern unseres Kursangebotes und freuen uns schon sehr auf eure Anfragen und spannende Kurse mit euch!
+        <p> Wir wünschen euch viel Spaß beim Durchstöbern unseres Kursangebotes und freuen uns schon sehr auf eure Anfragen und spannende Kurse mit euch!
 
+      </div>
+    </div>
+
+    <div class="page page-right">
+      <h3> Anfrage stellen </h3>
+      <div class="flex flex-row space-even">
+        <div class="flex flex-col">
+          <h4 align=center> Onlineformular</h4>
+          <img id="QR" src="../content/QR-Codes/Typeform.png">
+        </div>
+
+        <div class="flex flex-col">
+          <h4 align=center> Kontaktdaten </h4>
+         <p style="margin-top: 80px;text-align: center;"> <b>Alexander Kutschera</b> <br>
+           Mail: alex@oberlab.de <br>
+           Tel.: +49 8022 939 26 32 <br>
+           Web: mobiles-fablab.de
         </div>
       </div>
+    </div>
 
-      <div class="page page-right">
-        <h3> Anfrage stellen </h3>
-        <div class="flex flex-row space-even">
-          <div class="flex flex-col">
-            <h4 align=center> Onlineformular</h4>
-            <img id="QR" src="../content/QR-Codes/Typeform.png">
-          </div>
+    <div class="page page-left">
+      <h3> Inhalt </h3>
+      {{{ toc }}}
+    </div>
 
-          <div class="flex flex-col">
-            <h4 align=center> Kontaktdaten </h4>
-           <p style="margin-top: 80px;text-align: center;"> <b>Alexander Kutschera</b> <br>
-             Mail: alex@oberlab.de <br>
-             Tel.: +49 8022 939 26 32 <br>
-             Web: mobiles-fablab.de
-          </div>
-        </div>
-      </div>
-
-      <div class="page page-left">
-        <h3> Inhalt </h3>
-        {{{ toc }}}
-      </div>
-
-      <div class="page page-right">
-        <h3> Inhalt </h3>
-      </div>
+    <div class="page page-right">
+      <h3> Inhalt </h3>
+    </div>
 
     {{#each pages}}
             {{{ this }}}
